lifeguard-derive/tests/ui/compile_error_duplicate_related_impl_different_columns.stderr
error: Multiple relations target the same entity `PostEntity` with different column configurations.

       First relation `CreatedPosts` uses:
       - from: Column::Id
       - to: PostColumn::CreatorId

       Second relation `EditedPosts` uses:
       - from: Column::Id
       - to: PostColumn::EditorId

       Rust doesn't allow multiple `impl Related<PostEntity> for Entity` implementations.
       The macro would silently discard the second configuration, leading to incorrect queries.

       Solution: Use different target entities, or ensure all relations to the same entity use identical column configurations.
   --> tests/ui/compile_error_duplicate_related_impl_different_columns.rs:132:5
    |
132 |     EditedPosts,
    |     ^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
   --> tests/ui/compile_error_duplicate_related_impl_different_columns.rs:133:2
    |
133 | }
    |  ^ consider adding a `main` function to `$DIR/tests/ui/compile_error_duplicate_related_impl_different_columns.rs`
